# conway

./: CMakeLists.txt  README.md  vcpkg.json
bench/: bench_hash.cpp
src/: grid_types.hpp  main.cpp
